Assure that the items within the "Others" group are sorted too, when sorting by name and using categorization.

@Rafael: Could you please have a look whether this patch is OK? It fixes bug 173027 but it is unclear for me why the deleted lines had been added at all. Thanks :-)

CCMAIL: ereslibre@kde.org
BUG: 173027

svn path=/trunk/KDE/kdebase/apps/; revision=899245