src/dolphinmodel.cpp
@@ -354,10 +354,6 @@ QVariant DolphinModel::sortRoleData(const QModelIndex& index) const
     switch (index.column()) {
     case KDirModel::Name: {
         retVariant = data(index, KCategorizedSortFilterProxyModel::CategoryDisplayRole);
-
-        if (retVariant == i18nc("@title:group Name", others)) {
-            retVariant = QString(QChar(QChar::ReplacementCharacter));
-        }
         break;
     }
 
